<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nominator"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_nominator"
        android:inputType="numberSigned"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/divided_by" />

    <EditText
        android:id="@+id/dominator"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_dominator"
        android:importantForAutofill="no"
        android:inputType="numberSigned" tools:targetApi="o"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/reduce" />

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt" />

</LinearLayout>