<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".optionActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/candidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter"
        android:inputType="number" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/diag" />


    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/noPrime" />
</LinearLayout>